--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
 
     <hr size="3" noshade="3">
    
-    <a href="Hobbies.html">Hobbies</a>
+    <a href="hobbies.html">Hobbies</a>
 </body>
 </html>
