--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="/image/srbp.jpg" alt="kohli"></td>
+            <td><img src="/image/srbp.jpg" alt="error loading image"></td>
             <td> <h1>Sourabh Patidar</h1>
                 <p>Student at ips collage indore</p></td>
         </tr>
